Abonnements page graph charter + align header + correct 'back' button ok

--- a/litrevu/reviews/static/CSS/styles.css
+++ b/litrevu/reviews/static/CSS/styles.css
@@ -38,12 +38,6 @@ button:hover {
   margin: 5px 0; 
 }  */
 
-/* .demi-button { 
-  display: block; 
-  width: 50%; 
-  background-color: lightsalmon; 
-  border: none; 
-}  */
 .bold { 
   font-weight: bold; 
 } 
@@ -56,6 +50,9 @@ button:hover {
 .text_center { 
   text-align: center; 
 } 
+.input_large input { 
+  width: 85%; 
+} 
 
 .container { 
   width: 90%; 
@@ -66,11 +63,9 @@ button:hover {
   max-width: 100px; 
   float: left; 
 } 
-#header > h2 { 
-  max-width: 80%; 
+#page_title { 
   padding-top: 1rem; 
-  /* height: 100px;  */
-  vertical-align: middle; 
+  margin-right: 1rem; 
 } 
 .cadre { 
   border: var(--deco_color) solid 1px; 
